manifestos/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: alexa-remote
  namespace: alexa-remote
spec:
  selector:
    app: alexa-remote
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
